--- a/css/main.css
+++ b/css/main.css
@@ -771,6 +771,12 @@ nav a.active {
   background-color: #fff;
 }
 
+@media (min-width: 1100px) {
+  #testimonial .info {
+    height: 340px;
+  }
+}
+
 #testimonial .info .name {
   color: #1B4071;
   text-align: right;
@@ -3634,7 +3640,7 @@ footer ul li .speciel {
   }
 
   #testimonial .info {
-    height: 100%
+    min-height: 100%
   }
 
   .main-row-three-block {
